syntax = "proto3";

import "request.proto";
import "response.proto";
import "sync.proto";
import "blockchain.proto";
import "consensus.proto";
import "auth.proto";
import "executor.proto";

enum OperateType {
    BROADCAST = 0;
    SINGLE = 1;
    SUBTRACT = 2;
}

message Message {

    uint32 cmd_id = 1;
    uint32 origin = 2;
    OperateType operate = 3;

    oneof content {

        bytes RawBytes = 4;

        Request Request = 5;
        Response Response = 6;

        SyncRequest SyncRequest = 7;
        SyncResponse SyncResponse = 8;

        Status Status = 9;
        RichStatus RichStatus = 10;

        SignedProposal SignedProposal = 11;

        Block Block = 12;
        BlockWithProof BlockWithProof = 13;
        BlockHeader BlockHeader = 14;
        BlockTxs BlockTxs = 15;

        BlockTxHashes BlockTxHashes = 16;
        BlockTxHashesReq BlockTxHashesReq = 17;

        VerifyTxReq VerifyTxReq = 18;
        VerifyTxResp VerifyTxResp = 19;
        VerifyBlockReq VerifyBlockReq = 20;
        VerifyBlockResp VerifyBlockResp = 21;

        ExecutedResult ExecutedResult = 22;
    }
}
